[gd_scene load_steps=6 format=3 uid="uid://bd6sncl22y8db"]

[ext_resource type="Script" uid="uid://dnr4ilkegvrxp" path="res://scenes/menu/MainMenu.gd" id="1_main_menu"]
[ext_resource type="Script" uid="uid://b21ns3whpr5x3" path="res://scenes/menu/TreeVisualEffect.gd" id="1_tree_effect"]
[ext_resource type="Shader" uid="uid://g3alu3rvi1hs" path="res://assets/shaders/balatro.gdshader" id="2_s3dsm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uwj7d"]
shader = ExtResource("2_s3dsm")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = 0.0
shader_parameter/spin_speed = 8.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(1, 1, 1, 1)
shader_parameter/colour_2 = Color(1, 1, 1, 1)
shader_parameter/colour_3 = Color(0.62, 0.62, 0.62, 1)
shader_parameter/contrast = 2.0
shader_parameter/lighting = 0.4
shader_parameter/spin_amount = 0.36
shader_parameter/pixel_filter = 700.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s3dsm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_uwj7d")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TreeVisualEffect" type="Node2D" parent="."]
position = Vector2(1074.64, 0)
scale = Vector2(-3, -3)
script = ExtResource("1_tree_effect")
tree_depth = 6
branch_angle = 40.0
length_reduction = 0.9
draw_speed = 0.2
fade_delay = 7.0
fade_speed = 0.505

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="LeftPanel/MenuContainer"]
material = SubResource("ShaderMaterial_s3dsm")
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Root Path"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="LeftPanel/MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar"

[node name="QuitButton" type="Button" parent="LeftPanel/MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Salir"
